--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ qt_standard_project_setup()
 
 qt_add_executable(apphelloqt
     main.cpp HelloContext.cpp
+    MyTableModel.cpp
 )
 
 qt_add_qml_module(apphelloqt
